# fcemulator

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COMMERCIAL.md  Cargo.toml  README.md  README_EN.md  findings.md  progress.md  task_plan.md
.codex/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: DMA仲裁设计说明.md  FamiStudio-导出规范.md  M1-创作IDE-使用说明.md  M2-资源与音频-使用说明.md  Mapper-架构优化计划.md  Mapper-适配差距清单.md  Mapper-适配引用记录.md  VRC7-OPLL-引用记录.md  tauri-界面计划.md  交接-L1.1-PPU逐dot重构.md  复古FC游戏集成开发策划案.md  模式分离-使用说明.md  模拟器优化计划.md  策划案-基于现状-可行性评估.md  路线图.md  需求文档.md
fc-cli/: Cargo.toml
fc-cli/src/: main.rs  tauri_bridge.rs
fc-core/: Cargo.toml
fc-core/src/: apu.rs  blip.rs  bus.rs  cartridge.rs  cheat.rs  control_deck.rs  cpu.rs  debug.rs  disasm.rs  event.rs  expr.rs  heatmap.rs  input.rs  lib.rs  mapper.rs  palette.rs  ppu.rs  save_state.rs  types.rs
fc-core/src/mapper/: bank.rs  basic.rs  dispatch.rs  expansion_audio.rs  expansion_mappers.rs  factory.rs  irq.rs  kind.rs  mmc1.rs  mmc2.rs  mmc3.rs  mmc4.rs  mmc5.rs  ops.rs  rambo1.rs  tests.rs  vrc4.rs
fc-core/src/mapper/basic/: ave.rs  bandai.rs  bootleg.rs  core.rs  discrete.rs  irem.rs  irq.rs  jy.rs  konami.rs  latch.rs  longtail.rs  multicart.rs  namco.rs  nanjing.rs  ntdec.rs  opencorp.rs  sl12.rs  special.rs  subor.rs  taito.rs  txc.rs  unlicensed.rs  waixing.rs
fc-core/src/mapper/basic/latch/: discrete.rs  jaleco.rs  sachen.rs  sunsoft.rs  variants.rs
fc-core/src/mapper/mmc3/: constructors.rs  state.rs  tests.rs
fc-core/src/mapper/tests/: behavior.rs  capability.rs
fc-core/src/mapper/tests/behavior/: asic.rs  audio.rs  bandai.rs  irq.rs  latch.rs  txc.rs
fc-gui/: Cargo.toml
fc-gui/src/: audio.rs  main.rs
fc-mcp/: Cargo.toml
fc-mcp/src/: lib.rs  server.rs  tools.rs
fc-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
fc-tauri/src/: devtools.ts  emu.ts  ide.ts  main.ts  render.ts
fc-tauri/src-tauri/: Cargo.toml  tauri.conf.json
fc-tauri/src-tauri/capabilities/: default.json
fc-tauri/src-tauri/icons/: icon.icns
fc-tauri/src-tauri/src/: audio.rs  build_pipeline.rs  chr.rs  converters.rs  emu.rs  emu_mcp.rs  famistudio.rs  ide_mcp.rs  lib.rs  main.rs  map.rs  palettes.rs  project.rs  storage.rs  tracker.rs  watch.rs
fc-tauri/src/components/: ControlPanel.vue  EmptyState.vue  GameCard.vue  Icon.vue
fc-tauri/src/composables/: useEmuLoop.ts  useHaltWatch.ts  useKeyboard.ts
fc-tauri/src/editor/: cm6502.ts  nesPalette.ts
fc-tauri/src/ide/: BuildPanel.vue  ChrEditorPanel.vue  EditorPanel.vue  FileTreePanel.vue  FixedDockTab.vue  HeaderEditor.vue  MapEditorPanel.vue  NewMapDialog.vue  NewProjectDialog.vue  PreviewPanel.vue  PromptDialog.vue  TrackerPanel.vue
fc-tauri/src/layout/: AppShell.vue  FooterNav.vue  StatusBar.vue  TitleBar.vue  Toolbar.vue
fc-tauri/src/stores/: emu.ts  library.ts  project.ts
fc-tauri/src/styles/: global.css
fc-tauri/src/theme/: naive.ts  tokens.ts
fc-tauri/src/views/: CheatsView.vue  DebugView.vue  IdeView.vue  LauncherView.vue  LibraryView.vue  PlayView.vue  SavesView.vue  SettingsView.vue
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/specs/build-pipeline/: spec.md
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/specs/code-editor/: spec.md
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/specs/project-model/: spec.md
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/specs/rom-packaging/: spec.md
openspec/changes/archive/2026-06-18-nes-ide-milestone-plan/specs/source-debug-link/: spec.md
openspec/changes/emu-opt-foundation/: baseline-extended.json  baseline.json  bench-baseline.txt  design.md  proposal.md  tasks.md
openspec/changes/emu-opt-foundation/specs/perf-bench/: spec.md
openspec/changes/emu-opt-foundation/specs/test-matrix/: spec.md
openspec/changes/emu-opt-foundation/specs/trace-log/: spec.md
openspec/changes/nes-event-viewer/: design.md  proposal.md  tasks.md
openspec/changes/nes-event-viewer/specs/access-heatmap/: spec.md
openspec/changes/nes-event-viewer/specs/event-breakpoint/: spec.md
openspec/changes/nes-event-viewer/specs/event-viewer/: spec.md
openspec/changes/nes-ide-mode-separation/: design.md  proposal.md  tasks.md
openspec/changes/nes-ide-mode-separation/specs/app-navigation/: spec.md
openspec/changes/nes-ide-mode-separation/specs/game-session/: spec.md
openspec/changes/nes-ide-mode-separation/specs/studio-preview/: spec.md
openspec/changes/nes-ide-resources-audio/: design.md  proposal.md  tasks.md
openspec/changes/nes-ide-resources-audio/specs/asset-converters/: spec.md
openspec/changes/nes-ide-resources-audio/specs/audio-tracker/: spec.md
openspec/changes/nes-ide-resources-audio/specs/build-pipeline/: spec.md
openspec/changes/nes-ide-resources-audio/specs/chr-editor/: spec.md
openspec/changes/nes-ide-resources-audio/specs/famistudio-integration/: spec.md
openspec/changes/nes-ide-resources-audio/specs/map-editor/: spec.md
openspec/changes/nes-ide-resources-audio/specs/rom-packaging/: spec.md
openspec/changes/ppu-per-dot-restructure/: design.md  proposal.md  tasks.md
openspec/changes/ppu-per-dot-restructure/specs/ppu-core/: spec.md
openspec/specs/build-pipeline/: spec.md
openspec/specs/code-editor/: spec.md
openspec/specs/project-model/: spec.md
openspec/specs/rom-packaging/: spec.md
openspec/specs/source-debug-link/: spec.md
tools/: add-nes-suffix.sh  nestest-parity.py  ppu-self-time.sh  trace-diff.README.md  trace-diff.py
