[package]
name = "fc-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FC/NES emulator core — cycle-driven CPU/PPU/APU, mappers, save states"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
bitflags = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
crc32fast = "1"
oxideav-nsf = { version = "0.0.3", default-features = false }
