[package]
name = "fc-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "FC/NES emulator GUI (egui + wgpu)"

[[bin]]
name = "fc-gui"
path = "src/main.rs"

[dependencies]
fc-core = { path = "../fc-core" }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
cpal = { workspace = true }
rfd = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
