[package]
name = "fc-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server exposing the FC emulator as tools for LLM agents"

[dependencies]
fc-core = { path = "../fc-core" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
png = { workspace = true }
