[package]
name = "fc-tauri"
version = "0.1.0"
description = "FC/NES emulator — Tauri + Vue frontend"
edition = "2021"

[lib]
name = "fc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
fc-core = { path = "../../fc-core" }
cpal = "0.15"
gilrs = "0.11"
png = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6"
tauri-plugin-mcp-gui = "0.1.0"

[features]
# default Tauri custom-protocol for release builds
custom-protocol = ["tauri/custom-protocol"]
